All_In_One/addons/fractals/lsystem/lgrammar/lsystemParser.py
# Generated from lsystem.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class lsystemParser ( Parser ):

    grammarFileName = "lsystem.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "','", "'}'", "'('", "')'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'r'", "'d'", "'m'", "'push'", "'pop'", "'init'", "'start'", 
                     "'define'", "'rules'", "'final'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "FLOAT", "INT", "NEG_INT", 
                      "SPACE", "NT", "DEFINE", "CONTENT_END", "CONTENT_START", 
                      "SECTION_START", "ROT", "DRAW", "MOVE", "PUSH", "POP", 
                      "INIT_SECTION", "INIT_START", "DEFINE_SECTION", "RULES_SECTION", 
                      "FINAL_SECTION" ]

    RULE_probability = 0
    RULE_rand_entry = 1
    RULE_rotation = 2
    RULE_move = 3
    RULE_draw = 4
    RULE_push = 5
    RULE_pop = 6
    RULE_term = 7
    RULE_non_term = 8
    RULE_define_term = 9
    RULE_init_sec = 10
    RULE_init_start = 11
    RULE_define_sec = 12
    RULE_define_entity = 13
    RULE_define_res = 14
    RULE_rule_sec = 15
    RULE_rule_entity = 16
    RULE_rule_res = 17
    RULE_final_sec = 18
    RULE_final_rule_entity = 19
    RULE_final_rule_res = 20
    RULE_code = 21

    ruleNames =  [ "probability", "rand_entry", "rotation", "move", "draw", 
                   "push", "pop", "term", "non_term", "define_term", "init_sec", 
                   "init_start", "define_sec", "define_entity", "define_res", 
                   "rule_sec", "rule_entity", "rule_res", "final_sec", "final_rule_entity", 
                   "final_rule_res", "code" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    FLOAT=6
    INT=7
    NEG_INT=8
    SPACE=9
    NT=10
    DEFINE=11
    CONTENT_END=12
    CONTENT_START=13
    SECTION_START=14
    ROT=15
    DRAW=16
    MOVE=17
    PUSH=18
    POP=19
    INIT_SECTION=20
    INIT_START=21
    DEFINE_SECTION=22
    RULES_SECTION=23
    FINAL_SECTION=24

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProbabilityContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self):
            return self.getToken(lsystemParser.FLOAT, 0)

        def getRuleIndex(self):
            return lsystemParser.RULE_probability

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProbability" ):
                return visitor.visitProbability(self)
            else:
                return visitor.visitChildren(self)




    def probability(self):

        localctx = lsystemParser.ProbabilityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_probability)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(lsystemParser.FLOAT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Rand_entryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self, i:int=None):
            if i is None:
                return self.getTokens(lsystemParser.FLOAT)
            else:
                return self.getToken(lsystemParser.FLOAT, i)

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(lsystemParser.SPACE)
            else:
                return self.getToken(lsystemParser.SPACE, i)

        def getRuleIndex(self):
            return lsystemParser.RULE_rand_entry

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRand_entry" ):
                return visitor.visitRand_entry(self)
            else:
                return visitor.visitChildren(self)




    def rand_entry(self):

        localctx = lsystemParser.Rand_entryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_rand_entry)
        self._la = 0 # Token type
        try:
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [lsystemParser.FLOAT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.match(lsystemParser.FLOAT)
                pass
            elif token in [lsystemParser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.match(lsystemParser.T__0)
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==lsystemParser.SPACE:
                    self.state = 48
                    self.match(lsystemParser.SPACE)
                    self.state = 53
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 54
                self.match(lsystemParser.FLOAT)
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==lsystemParser.SPACE:
                    self.state = 55
                    self.match(lsystemParser.SPACE)
                    self.state = 60
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 61
                self.match(lsystemParser.T__1)
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==lsystemParser.SPACE:
                    self.state = 62
                    self.match(lsystemParser.SPACE)
                    self.state = 67
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 68
                self.match(lsystemParser.FLOAT)
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==lsystemParser.SPACE:
                    self.state = 69
                    self.match(lsystemParser.SPACE)
                    self.state = 74
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 75
                self.match(lsystemParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RotationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ROT(self):
            return self.getToken(lsystemParser.ROT, 0)

        def rand_entry(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lsystemParser.Rand_entryContext)
            else:
                return self.getTypedRuleContext(lsystemParser.Rand_entryContext,i)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(lsystemParser.SPACE)
            else:
                return self.getToken(lsystemParser.SPACE, i)

        def getRuleIndex(self):
            return lsystemParser.RULE_rotation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRotation" ):
                return visitor.visitRotation(self)
            else:
                return visitor.visitChildren(self)




    def rotation(self):

        localctx = lsystemParser.RotationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_rotation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(lsystemParser.ROT)
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [lsystemParser.T__3]:
                self.state = 79
                self.match(lsystemParser.T__3)
                self.state = 112
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 95
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        self.state = 83
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==lsystemParser.SPACE:
                            self.state = 80
                            self.match(lsystemParser.SPACE)
                            self.state = 85
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 86
                        self.rand_entry()
                        self.state = 90
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==lsystemParser.SPACE:
                            self.state = 87
                            self.match(lsystemParser.SPACE)
                            self.state = 92
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 93
                        self.match(lsystemParser.T__1)


                    self.state = 100
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==lsystemParser.SPACE:
                        self.state = 97
                        self.match(lsystemParser.SPACE)
                        self.state = 102
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 103
                    self.rand_entry()
                    self.state = 107
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==lsystemParser.SPACE:
                        self.state = 104
                        self.match(lsystemParser.SPACE)
                        self.state = 109
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 110
                    self.match(lsystemParser.T__1)


                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==lsystemParser.SPACE:
                    self.state = 114
                    self.match(lsystemParser.SPACE)
                    self.state = 119
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 120
                self.rand_entry()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==lsystemParser.SPACE:
                    self.state = 121
                    self.match(lsystemParser.SPACE)
                    self.state = 126
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 127
                self.match(lsystemParser.T__4)
                pass
            elif token in [lsystemParser.T__0, lsystemParser.FLOAT]:
                self.state = 129
                self.rand_entry()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MoveContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MOVE(self):
            return self.getToken(lsystemParser.MOVE, 0)

        def rand_entry(self):
            return self.getTypedRuleContext(lsystemParser.Rand_entryContext,0)


        def getRuleIndex(self):
            return lsystemParser.RULE_move

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMove" ):
                return visitor.visitMove(self)
            else:
                return visitor.visitChildren(self)




    def move(self):

        localctx = lsystemParser.MoveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_move)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(lsystemParser.MOVE)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==lsystemParser.T__0 or _la==lsystemParser.FLOAT:
                self.state = 133
                self.rand_entry()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DrawContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DRAW(self):
            return self.getToken(lsystemParser.DRAW, 0)

        def rand_entry(self):
            return self.getTypedRuleContext(lsystemParser.Rand_entryContext,0)


        def getRuleIndex(self):
            return lsystemParser.RULE_draw

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDraw" ):
                return visitor.visitDraw(self)
            else:
                return visitor.visitChildren(self)




    def draw(self):

        localctx = lsystemParser.DrawContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_draw)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(lsystemParser.DRAW)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==lsystemParser.T__0 or _la==lsystemParser.FLOAT:
                self.state = 137
                self.rand_entry()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PushContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUSH(self):
            return self.getToken(lsystemParser.PUSH, 0)

        def getRuleIndex(self):
            return lsystemParser.RULE_push

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPush" ):
                return visitor.visitPush(self)
            else:
                return visitor.visitChildren(self)




    def push(self):

        localctx = lsystemParser.PushContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_push)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(lsystemParser.PUSH)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POP(self):
            return self.getToken(lsystemParser.POP, 0)

        def getRuleIndex(self):
            return lsystemParser.RULE_pop

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPop" ):
                return visitor.visitPop(self)
            else:
                return visitor.visitChildren(self)




    def pop(self):

        localctx = lsystemParser.PopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_pop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(lsystemParser.POP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rotation(self):
            return self.getTypedRuleContext(lsystemParser.RotationContext,0)


        def move(self):
            return self.getTypedRuleContext(lsystemParser.MoveContext,0)


        def draw(self):
            return self.getTypedRuleContext(lsystemParser.DrawContext,0)


        def push(self):
            return self.getTypedRuleContext(lsystemParser.PushContext,0)


        def pop(self):
            return self.getTypedRuleContext(lsystemParser.PopContext,0)


        def getRuleIndex(self):
            return lsystemParser.RULE_term

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = lsystemParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_term)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [lsystemParser.ROT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.rotation()
                pass
            elif token in [lsystemParser.MOVE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.move()
                pass
            elif token in [lsystemParser.DRAW]:
                self.enterOuterAlt(localctx, 3)
                self.state = 146
                self.draw()
                pass
            elif token in [lsystemParser.PUSH]:
                self.enterOuterAlt(localctx, 4)
                self.state = 147
                self.push()
                pass
            elif token in [lsystemParser.POP]:
                self.enterOuterAlt(localctx, 5)
                self.state = 148
                self.pop()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Non_termContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NT(self):
            return self.getToken(lsystemParser.NT, 0)

        def getRuleIndex(self):
            return lsystemParser.RULE_non_term

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNon_term" ):
                return visitor.visitNon_term(self)
            else:
                return visitor.visitChildren(self)




    def non_term(self):

        localctx = lsystemParser.Non_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_non_term)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(lsystemParser.NT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Define_termContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFINE(self):
            return self.getToken(lsystemParser.DEFINE, 0)

        def getRuleIndex(self):
            return lsystemParser.RULE_define_term

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefine_term" ):
                return visitor.visitDefine_term(self)
            else:
                return visitor.visitChildren(self)




    def define_term(self):

        localctx = lsystemParser.Define_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_define_term)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(lsystemParser.DEFINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Init_secContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def init_start(self):
            return self.getTypedRuleContext(lsystemParser.Init_startContext,0)


        def INIT_SECTION(self):
            return self.getToken(lsystemParser.INIT_SECTION, 0)

        def SECTION_START(self):
            return self.getToken(lsystemParser.SECTION_START, 0)

        def getRuleIndex(self):
            return lsystemParser.RULE_init_sec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInit_sec" ):
                return visitor.visitInit_sec(self)
            else:
                return visitor.visitChildren(self)




    def init_sec(self):

        localctx = lsystemParser.Init_secContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_init_sec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==lsystemParser.INIT_SECTION:
                self.state = 155
                self.match(lsystemParser.INIT_SECTION)
                self.state = 156
                self.match(lsystemParser.SECTION_START)


            self.state = 159
            self.init_start()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Init_startContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INIT_START(self):
            return self.getToken(lsystemParser.INIT_START, 0)

        def CONTENT_START(self):
            return self.getToken(lsystemParser.CONTENT_START, 0)

        def non_term(self):
            return self.getTypedRuleContext(lsystemParser.Non_termContext,0)


        def CONTENT_END(self):
            return self.getToken(lsystemParser.CONTENT_END, 0)

        def getRuleIndex(self):
            return lsystemParser.RULE_init_start

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInit_start" ):
                return visitor.visitInit_start(self)
            else:
                return visitor.visitChildren(self)




    def init_start(self):

        localctx = lsystemParser.Init_startContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_init_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(lsystemParser.INIT_START)
            self.state = 162
            self.match(lsystemParser.CONTENT_START)
            self.state = 163
            self.non_term()
            self.state = 164
            self.match(lsystemParser.CONTENT_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Define_secContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFINE_SECTION(self):
            return self.getToken(lsystemParser.DEFINE_SECTION, 0)

        def SECTION_START(self):
            return self.getToken(lsystemParser.SECTION_START, 0)

        def define_entity(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lsystemParser.Define_entityContext)
            else:
                return self.getTypedRuleContext(lsystemParser.Define_entityContext,i)


        def getRuleIndex(self):
            return lsystemParser.RULE_define_sec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefine_sec" ):
                return visitor.visitDefine_sec(self)
            else:
                return visitor.visitChildren(self)




    def define_sec(self):

        localctx = lsystemParser.Define_secContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_define_sec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(lsystemParser.DEFINE_SECTION)
            self.state = 167
            self.match(lsystemParser.SECTION_START)
            self.state = 169 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 168
                self.define_entity()
                self.state = 171 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==lsystemParser.DEFINE):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Define_entityContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def define_term(self):
            return self.getTypedRuleContext(lsystemParser.Define_termContext,0)


        def CONTENT_START(self):
            return self.getToken(lsystemParser.CONTENT_START, 0)

        def define_res(self):
            return self.getTypedRuleContext(lsystemParser.Define_resContext,0)


        def CONTENT_END(self):
            return self.getToken(lsystemParser.CONTENT_END, 0)

        def getRuleIndex(self):
            return lsystemParser.RULE_define_entity

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefine_entity" ):
                return visitor.visitDefine_entity(self)
            else:
                return visitor.visitChildren(self)




    def define_entity(self):

        localctx = lsystemParser.Define_entityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_define_entity)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.define_term()
            self.state = 174
            self.match(lsystemParser.CONTENT_START)
            self.state = 175
            self.define_res()
            self.state = 176
            self.match(lsystemParser.CONTENT_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Define_resContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def non_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lsystemParser.Non_termContext)
            else:
                return self.getTypedRuleContext(lsystemParser.Non_termContext,i)


        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lsystemParser.TermContext)
            else:
                return self.getTypedRuleContext(lsystemParser.TermContext,i)


        def define_term(self):
            return self.getTypedRuleContext(lsystemParser.Define_termContext,0)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(lsystemParser.SPACE)
            else:
                return self.getToken(lsystemParser.SPACE, i)

        def getRuleIndex(self):
            return lsystemParser.RULE_define_res

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefine_res" ):
                return visitor.visitDefine_res(self)
            else:
                return visitor.visitChildren(self)




    def define_res(self):

        localctx = lsystemParser.Define_resContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_define_res)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,21,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 180
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [lsystemParser.NT]:
                        self.state = 178
                        self.non_term()
                        pass
                    elif token in [lsystemParser.ROT, lsystemParser.DRAW, lsystemParser.MOVE, lsystemParser.PUSH, lsystemParser.POP]:
                        self.state = 179
                        self.term()
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 183 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 182
                        self.match(lsystemParser.SPACE)
                        self.state = 185 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==lsystemParser.SPACE):
                            break
             
                self.state = 191
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,21,self._ctx)

            self.state = 195
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [lsystemParser.NT]:
                self.state = 192
                self.non_term()
                pass
            elif token in [lsystemParser.ROT, lsystemParser.DRAW, lsystemParser.MOVE, lsystemParser.PUSH, lsystemParser.POP]:
                self.state = 193
                self.term()
                pass
            elif token in [lsystemParser.DEFINE]:
                self.state = 194
                self.define_term()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 200
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==lsystemParser.SPACE:
                self.state = 197
                self.match(lsystemParser.SPACE)
                self.state = 202
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Rule_secContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RULES_SECTION(self):
            return self.getToken(lsystemParser.RULES_SECTION, 0)

        def SECTION_START(self):
            return self.getToken(lsystemParser.SECTION_START, 0)

        def rule_entity(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lsystemParser.Rule_entityContext)
            else:
                return self.getTypedRuleContext(lsystemParser.Rule_entityContext,i)


        def getRuleIndex(self):
            return lsystemParser.RULE_rule_sec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRule_sec" ):
                return visitor.visitRule_sec(self)
            else:
                return visitor.visitChildren(self)




    def rule_sec(self):

        localctx = lsystemParser.Rule_secContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_rule_sec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 203
            self.match(lsystemParser.RULES_SECTION)
            self.state = 204
            self.match(lsystemParser.SECTION_START)
            self.state = 206 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 205
                self.rule_entity()
                self.state = 208 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==lsystemParser.NT):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Rule_entityContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def non_term(self):
            return self.getTypedRuleContext(lsystemParser.Non_termContext,0)


        def CONTENT_START(self):
            return self.getToken(lsystemParser.CONTENT_START, 0)

        def rule_res(self):
            return self.getTypedRuleContext(lsystemParser.Rule_resContext,0)


        def CONTENT_END(self):
            return self.getToken(lsystemParser.CONTENT_END, 0)

        def probability(self):
            return self.getTypedRuleContext(lsystemParser.ProbabilityContext,0)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(lsystemParser.SPACE)
            else:
                return self.getToken(lsystemParser.SPACE, i)

        def getRuleIndex(self):
            return lsystemParser.RULE_rule_entity

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRule_entity" ):
                return visitor.visitRule_entity(self)
            else:
                return visitor.visitChildren(self)




    def rule_entity(self):
